Fix combining rotation and cropping lead to crash

--- a/app/containers/App.css
+++ b/app/containers/App.css
@@ -259,3 +259,7 @@
 .feedbackFormWebView {
   height: 85vh;
 }
+
+.smallInfo {
+  color: rgba(0,0,0,.87);
+}
